--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:allowBackup="true"
@@ -23,7 +25,9 @@
         </activity>
         <activity android:name=".AccueilActivity"></activity>
         <activity android:name=".InfosActivity"></activity>
-        <activity android:name=".NotesActivity"></activity>*
+        <activity android:name=".NotesActivity"></activity>
+        <activity android:name=".BilanUnActivity"></activity>
+        <activity android:name=".BilanDeuxActivity"></activity>
     </application>
 
 </manifest>
